<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtNumeracao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|fill_horizontal"
                android:padding="8dp"
                android:text="@string/txtNumeracao"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtEnunciado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:gravity="start|fill_horizontal"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp"
                android:text="@string/txtEnunciado"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtNumeracao" />

            <RadioGroup
                android:id="@+id/RadioGrupo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtEnunciado">

                <RadioButton
                    android:id="@+id/radioA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:checked="false"
                    android:gravity="start"
                    android:text="@string/AlternativaA"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radioB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/AlternativaB"

                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radioC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/AlternativaC"

                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radioD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/AlternativaD"

                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radioE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/AlternativaE"

                    android:textSize="18sp" />

            </RadioGroup>

            <Button
                android:id="@+id/bntVoltar"
                android:layout_width="@android:dimen/app_icon_size"
                android:layout_height="@android:dimen/app_icon_size"
                android:gravity="start"
                android:onClick="pegarUmaQuestao"
                android:text="@string/bntVoltar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/RadioGrupo" />

            <Button
                android:id="@+id/bntAvançar"
                android:layout_width="@android:dimen/app_icon_size"
                android:layout_height="@android:dimen/app_icon_size"
                android:gravity="start"
                android:onClick="pegarUmaQuestao"
                android:text="@string/bntAvançar"
                app:layout_constraintStart_toEndOf="@+id/bntVoltar"
                app:layout_constraintTop_toBottomOf="@+id/RadioGrupo" />

            <TextView
                android:id="@+id/txtQuantidade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|fill_horizontal"
                android:text="@string/Quantidade"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bntAvançar" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>